k8s/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: geo-trails-api-strip-prefix
  namespace: geo-trails-api
spec:
  stripPrefix:
    prefixes:
      - /geo-trails
