k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: geo-trails-api
  namespace: geo-trails-api
  labels:
    app: geo-trails-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: geo-trails-api
  template:
    metadata:
      labels:
        app: geo-trails-api
    spec:
      imagePullSecrets:
        - name: ghcr-creds
      containers:
        - name: geo-trails-api
          image: ghcr.io/ericafenyo/geo-trails-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: http
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 20
            periodSeconds: 20
