k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: geo-trails-api
  namespace: geo-trails-api
spec:
  selector:
    app: geo-trails-api
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
